closed calls erc